GNOME Bugzilla – Bug 789722
GDM isn't starting for some users
Last modified: 2017-11-01 20:41:37 UTC
There's a race condition preventing gdm 3.26.2 from starting for some users. See https://bugs.archlinux.org/task/56172 heftig has tracked down the problem to an incomplete implementation of the new initialize method, leading to GDM changing state before the user is fully loaded. There's also some spurious calls to gdm_session_defaults_changed() that I inadvertently added when forward porting the initial patch from an older gdm release shipped in RHEL.
Created attachment 362648 [details] [review] session-worker: Adjust Initialize to behave more like SetupFor* Most importantly, wait for the user settings to be loaded.
Created attachment 362649 [details] [review] session: don't call gdm_session_defaults_changed from setup It's only needed to update the session type, which we do earlier in the function anyway.
Created attachment 362650 [details] [review] [PATCH] session-worker: Use g_variant_dup_string where possible Just a bit of cleanup.
Attachment 362648 [details] pushed as e3f731c - session-worker: Adjust Initialize to behave more like SetupFor* Attachment 362649 [details] pushed as b7720c2 - session: don't call gdm_session_defaults_changed from setup Attachment 362650 [details] pushed as f59694d - session-worker: Use g_variant_dup_string where possible
Created attachment 362660 [details] Log excerpt: Failed gnome-xorg session
Created attachment 362661 [details] Log excerpt: Successful gnome-xorg session with the Initialize patch
*** Bug 789720 has been marked as a duplicate of this bug. ***