session-worker: Use g_variant_dup_string where possible

https://bugzilla.gnome.org/show_bug.cgi?id=789722